# ir-slinger

./: .gitignore  CMakeLists.txt  irslinger.h  test.c  testBit.c
